# kniffel

./: .tool-versions  README.md  blogs.py  dice.py  jakob versuch etwas zu machen  local-multplayer.py  logic.py  main.py  model.py  requirements-dev.txt  requirements.txt  sheet.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/docs/: authorization.md  match-system-implementation.md  protocol.md
backend/src/: app.rs  auth.rs  main.rs  socket.rs
backend/src/auth/: claims.rs  error.rs  extractors.rs  jwt.rs  keys.rs  mod.rs
backend/src/common/: error.rs
backend/src/http/routes/: hello.rs  mod.rs  protected.rs  sessions.rs
backend/src/match/: mod.rs  model.rs
backend/src/services/: matches.rs  mod.rs  sessions.rs
frontend/: pyproject.toml
kniffel/: app.py  dice.py  main.py  sheet.py  ui.py
