[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = [ "ws" ] }
chrono = { version = "0.4.42", default-features = false, features = [ "clock" ]}
hyper = { version = "1.7.0", features = ["full"] }
jsonwebtoken = { version = "10.1.0", features = [ "rust_crypto" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ulid = "1.2.1"
uuid = "1.18.1"
